[gd_scene load_steps=22 format=3 uid="uid://oo8pp1huxkwe"]

[ext_resource type="Script" uid="uid://nkyau8ci1y28" path="res://Scripts/UI/UI.gd" id="1_gp83y"]
[ext_resource type="Texture2D" uid="uid://71xw8hjuxllo" path="res://Assets/UI/BG.png" id="2_sg202"]
[ext_resource type="Texture2D" uid="uid://bgwwa0y3rm55m" path="res://Assets/UI/HUD/AngerScale.png" id="3_kbp4m"]
[ext_resource type="Texture2D" uid="uid://chm2b6s8iw0kx" path="res://Assets/UI/HUD/Scale.png" id="3_q21gd"]
[ext_resource type="Texture2D" uid="uid://bk2klv3ed2n04" path="res://Assets/UI/HUD/SpeechBubble.png" id="4_6cl5i"]
[ext_resource type="Texture2D" uid="uid://b4n72wp48krhc" path="res://Assets/UI/HUD/Eye.png" id="4_feoln"]
[ext_resource type="Texture2D" uid="uid://cmmdc2qd8sxns" path="res://Assets/UI/emotions.png" id="5_ckob2"]
[ext_resource type="FontFile" uid="uid://bp625sncpuuld" path="res://Assets/UI/CustomFontTtf16H30ForPaint.ttf" id="7_jj418"]
[ext_resource type="Texture2D" uid="uid://ci1wu8j8ogxtk" path="res://Assets/UI/HUD/GearIcon.png" id="9_51i8y"]
[ext_resource type="AudioStream" uid="uid://1b0kl2c8vqnw" path="res://Assets/music_1.wav" id="10_kh56v"]
[ext_resource type="AudioStream" uid="uid://36phkf57l2yu" path="res://Assets/music_2.wav" id="11_k8m3e"]
[ext_resource type="AudioStream" uid="uid://qq2b2sjil5nb" path="res://Assets/music_3.wav" id="12_fnb24"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2811r"]
atlas = ExtResource("5_ckob2")
region = Rect2(110, 0, 55, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbplh"]
atlas = ExtResource("5_ckob2")
region = Rect2(0, 0, 55, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8k36"]
atlas = ExtResource("5_ckob2")
region = Rect2(110, 0, 55, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_mk2ph"]
atlas = ExtResource("5_ckob2")
region = Rect2(55, 0, 55, 55)

[sub_resource type="SpriteFrames" id="SpriteFrames_wkwm4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2811r")
}],
"loop": true,
"name": &"fuming",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbplh")
}],
"loop": true,
"name": &"happy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8k36")
}],
"loop": true,
"name": &"mad",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mk2ph")
}],
"loop": true,
"name": &"unhappy",
"speed": 5.0
}]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ds8bh"]
texture = ExtResource("4_6cl5i")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1n7qu"]
bg_color = Color(0.267304, 0.267304, 0.267304, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_1xvtl"]

[sub_resource type="AudioStreamPlaylist" id="AudioStreamPlaylist_1tx5b"]
stream_count = 3
stream_0 = ExtResource("10_kh56v")
stream_1 = ExtResource("11_k8m3e")
stream_2 = ExtResource("12_fnb24")

[node name="Interface" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_gp83y")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -36.0
offset_right = 64.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_sg202")
metadata/_edit_lock_ = true

[node name="StressBar" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -133.0
offset_top = -94.0
offset_right = -35.0
offset_bottom = 268.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 0
max_value = 9.0
fill_mode = 3
nine_patch_stretch = true
texture_under = ExtResource("3_q21gd")
texture_progress = ExtResource("3_kbp4m")

[node name="HumanFace" type="AnimatedSprite2D" parent="StressBar"]
position = Vector2(46.5391, -69)
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_wkwm4")
animation = &"unhappy"
autoplay = "happy"

[node name="AISpeechContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 154.0
offset_top = -1.0
offset_right = 1054.0
offset_bottom = 128.0
theme_override_styles/panel = SubResource("StyleBoxTexture_ds8bh")

[node name="MarginContainer" type="MarginContainer" parent="AISpeechContainer"]
layout_mode = 2
mouse_filter = 0
theme_override_constants/margin_left = 55
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 35

[node name="AISpeech" type="RichTextLabel" parent="AISpeechContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/normal_font = ExtResource("7_jj418")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="AIPortrait" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 47.0
offset_top = 19.0
offset_right = 158.0
offset_bottom = 130.0
mouse_filter = 0
texture = ExtResource("4_feoln")
expand_mode = 3
metadata/_edit_lock_ = true

[node name="ClockContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -363.0
offset_top = -140.0
offset_right = -171.0
offset_bottom = -54.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_1n7qu")

[node name="MarginContainer" type="MarginContainer" parent="ClockContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 0
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="ClockContainer/MarginContainer"]
layout_mode = 2
alignment = 1
metadata/_edit_lock_ = true

[node name="ClockHours" type="RichTextLabel" parent="ClockContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_fonts/normal_font = ExtResource("7_jj418")
theme_override_font_sizes/normal_font_size = 46
bbcode_enabled = true
text = "[center]05"
fit_content = true
scroll_active = false

[node name="ClockColon" type="RichTextLabel" parent="ClockContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 0.23
theme_override_fonts/normal_font = ExtResource("7_jj418")
theme_override_font_sizes/normal_font_size = 46
bbcode_enabled = true
text = "[center]:"
fit_content = true
scroll_active = false

[node name="ClockMinutes" type="RichTextLabel" parent="ClockContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_fonts/normal_font = ExtResource("7_jj418")
theme_override_font_sizes/normal_font_size = 46
bbcode_enabled = true
text = "[center]00"
fit_content = true
scroll_active = false

[node name="PauseButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 22.0
offset_top = -105.0
offset_right = 105.0
offset_bottom = -22.0
grow_vertical = 0
texture_normal = ExtResource("9_51i8y")
stretch_mode = 0

[node name="PauseMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.294118)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -112.0
offset_right = 157.0
offset_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Resume" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Options" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="ToMainMenu" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Back to Main Menu"

[node name="Exit" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_1xvtl")
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamPlaylist_1tx5b")
bus = &"BGM"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_kh56v")
bus = &"BGM"

[connection signal="pressed" from="PauseButton" to="." method="_on_Pause_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/ToMainMenu" to="." method="_on_ToMainMenu_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
